# AqariX

./: .dockerignore  .gitignore  AqariX_Business_Technical_Proposal.docx  AqariX_Business_Technical_Proposal_v1.1.docx  Dockerfile.railway  docker-compose.yml  package.json  pnpm-lock.yaml  railway.json  render.yaml  vercel.json  vibe-coding-mistakes-research.md
apps/mobile/: .env.example  pubspec.yaml
apps/web/: .env.example  README.md  package.json  (+1 more)
docs/: README.md  agents.md  ai-data-ml.md  ai-priorities.docx  ai-priorities.md  api-spec.md  architecture.md  database-schema.md  deployment.md  implementation-plan.md  implementation-requirements.md  monetization.md  operations.md  phase-0-status.md  prd.md  roadmap.md  security-compliance.md  tech-stack.md  testing-qa.md  ui-ux.md  user-flows.md
scratch/: convert.py
services/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/api/app/: __init__.py  auth.py  cache.py  limits.py  main.py  repository.py  schemas.py  server.py  settings.py  snapshot_store.py
services/api/app/nlp/: __init__.py  baseline_valuation.py  dialect_parser.py  fingerprint.py  quality.py  valuation_ml.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial_schema.py  0002_raw_listing_ingestion.py  0003_parsed_listing_quality.py  0004_raw_listing_fingerprints.py  0005_listing_contact_and_floor_signals.py  0006_listing_unit_price_features.py
services/api/tests/: test_api.py  test_dialect_parser.py
services/api/tests/fixtures/: irbid_listing_examples.json
(+69 files in other folders)
